// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`block-component > dangling-list 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [
        {
          "children": [
            {
              "checked": null,
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 12,
                          "line": 2,
                          "offset": 23,
                        },
                        "start": {
                          "column": 3,
                          "line": 2,
                          "offset": 14,
                        },
                      },
                      "type": "text",
                      "value": "list item",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 12,
                      "line": 2,
                      "offset": 23,
                    },
                    "start": {
                      "column": 3,
                      "line": 2,
                      "offset": 14,
                    },
                  },
                  "type": "paragraph",
                },
              ],
              "position": {
                "end": {
                  "column": 12,
                  "line": 2,
                  "offset": 23,
                },
                "start": {
                  "column": 1,
                  "line": 2,
                  "offset": 12,
                },
              },
              "spread": false,
              "type": "listItem",
            },
            {
              "checked": null,
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 12,
                          "line": 3,
                          "offset": 35,
                        },
                        "start": {
                          "column": 3,
                          "line": 3,
                          "offset": 26,
                        },
                      },
                      "type": "text",
                      "value": "list item",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 12,
                      "line": 3,
                      "offset": 35,
                    },
                    "start": {
                      "column": 3,
                      "line": 3,
                      "offset": 26,
                    },
                  },
                  "type": "paragraph",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 5,
                  "offset": 42,
                },
                "start": {
                  "column": 1,
                  "line": 3,
                  "offset": 24,
                },
              },
              "spread": true,
              "type": "listItem",
            },
          ],
          "ordered": false,
          "position": {
            "end": {
              "column": 6,
              "line": 5,
              "offset": 42,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 12,
            },
          },
          "spread": false,
          "start": null,
          "type": "list",
        },
        {
          "attributes": {},
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 13,
                      "line": 6,
                      "offset": 55,
                    },
                    "start": {
                      "column": 1,
                      "line": 6,
                      "offset": 43,
                    },
                  },
                  "type": "text",
                  "value": "slot content",
                },
              ],
              "position": {
                "end": {
                  "column": 13,
                  "line": 6,
                  "offset": 55,
                },
                "start": {
                  "column": 1,
                  "line": 6,
                  "offset": 43,
                },
              },
              "type": "paragraph",
            },
          ],
          "data": {
            "hName": "component-slot",
            "hProperties": {
              "v-slot:slot": "",
            },
          },
          "name": "slot",
          "position": {
            "end": {
              "column": 3,
              "line": 7,
              "offset": 58,
            },
            "start": {
              "column": 2,
              "line": 5,
              "offset": 38,
            },
          },
          "type": "componentContainerSection",
        },
      ],
      "data": {
        "hName": "component",
        "hProperties": {},
      },
      "fmAttributes": {},
      "name": "component",
      "position": {
        "end": {
          "column": 3,
          "line": 7,
          "offset": 58,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "rawData": undefined,
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 7,
      "offset": 58,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > empty 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [],
      "data": {
        "hName": "component",
        "hProperties": {},
      },
      "fmAttributes": {},
      "name": "component",
      "position": {
        "end": {
          "column": 3,
          "line": 2,
          "offset": 14,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 2,
      "offset": 14,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > empty-slot 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [
        {
          "attributes": {},
          "children": [],
          "data": {
            "hName": "component-slot",
            "hProperties": {
              "v-slot:text": "",
            },
          },
          "name": "text",
          "position": {
            "end": {
              "column": 3,
              "line": 3,
              "offset": 20,
            },
            "start": {
              "column": 2,
              "line": 2,
              "offset": 13,
            },
          },
          "type": "componentContainerSection",
        },
      ],
      "data": {
        "hName": "component",
        "hProperties": {},
      },
      "fmAttributes": {},
      "name": "component",
      "position": {
        "end": {
          "column": 3,
          "line": 3,
          "offset": 20,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 3,
      "offset": 20,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > frontmatter 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [],
      "data": {
        "hName": "with-frontmatter",
        "hProperties": {
          ":array": "[\\"item\\",{\\"itemKey\\":\\"value\\"}]",
          "key": "value",
        },
      },
      "fmAttributes": {
        "array": [
          "item",
          {
            "itemKey": "value",
          },
        ],
        "key": "value",
      },
      "name": "with-frontmatter",
      "position": {
        "end": {
          "column": 3,
          "line": 8,
          "offset": 75,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "rawData": "
key: value
array:
  - item
  - itemKey: value
---",
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 8,
      "offset": 75,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > frontmatter1 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [],
      "data": {
        "hName": "with-frontmatter",
        "hProperties": {
          ":array": "[\\"item\\",{\\"itemKey\\":\\"value\\"}]",
          ":key2": "{\\"subkey\\":\\"value\\",\\"subkey2\\":\\"value\\"}",
          "key": "value",
        },
      },
      "fmAttributes": {
        "array": [
          "item",
          {
            "itemKey": "value",
          },
        ],
        "key": "value",
        "key2": {
          "subkey": "value",
          "subkey2": "value",
        },
      },
      "name": "with-frontmatter",
      "position": {
        "end": {
          "column": 3,
          "line": 11,
          "offset": 114,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "rawData": "
key: value
key2:
  subkey: value
  subkey2: value
array:
  - item
  - itemKey: value
---",
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 11,
      "offset": 114,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > frontmatterYaml 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [],
      "data": {
        "hName": "with-frontmatter-yaml",
        "hProperties": {
          ":array": "[\\"item\\",{\\"itemKey\\":\\"value\\"}]",
          "key": "value",
        },
      },
      "fmAttributes": {
        "array": [
          "item",
          {
            "itemKey": "value",
          },
        ],
        "key": "value",
      },
      "name": "with-frontmatter-yaml",
      "position": {
        "end": {
          "column": 3,
          "line": 8,
          "offset": 84,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "rawData": "key: value
array:
  - item
  - itemKey: value
---",
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 8,
      "offset": 84,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > frontmatterYaml1 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [],
      "data": {
        "hName": "with-frontmatter-yaml1",
        "hProperties": {
          ":array": "[\\"item\\",{\\"itemKey\\":\\"value\\"}]",
          ":key2": "{\\"subkey\\":\\"value\\",\\"subkey2\\":\\"value\\"}",
          "key": "value",
        },
      },
      "fmAttributes": {
        "array": [
          "item",
          {
            "itemKey": "value",
          },
        ],
        "key": "value",
        "key2": {
          "subkey": "value",
          "subkey2": "value",
        },
      },
      "name": "with-frontmatter-yaml1",
      "position": {
        "end": {
          "column": 3,
          "line": 11,
          "offset": 124,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "rawData": "key: value
key2:
  subkey: value
  subkey2: value
array:
  - item
  - itemKey: value
---",
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 11,
      "offset": 124,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > frontmatterYamlOnly 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [
        {
          "lang": "yaml",
          "meta": "[yaml]",
          "position": {
            "end": {
              "column": 4,
              "line": 4,
              "offset": 52,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 24,
            },
          },
          "type": "code",
          "value": "yaml code",
        },
      ],
      "data": {
        "hName": "with-frontmatter-only",
        "hProperties": {},
      },
      "fmAttributes": {},
      "name": "with-frontmatter-only",
      "position": {
        "end": {
          "column": 3,
          "line": 5,
          "offset": 55,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 5,
      "offset": 55,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > ignore-code-fence 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 11,
                  "line": 2,
                  "offset": 22,
                },
                "start": {
                  "column": 1,
                  "line": 2,
                  "offset": 12,
                },
              },
              "type": "text",
              "value": "First line",
            },
          ],
          "position": {
            "end": {
              "column": 11,
              "line": 2,
              "offset": 22,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 12,
            },
          },
          "type": "paragraph",
        },
        {
          "lang": "cpp",
          "meta": null,
          "position": {
            "end": {
              "column": 4,
              "line": 6,
              "offset": 54,
            },
            "start": {
              "column": 1,
              "line": 4,
              "offset": 24,
            },
          },
          "type": "code",
          "value": "#include <iostream>",
        },
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 12,
                  "line": 8,
                  "offset": 67,
                },
                "start": {
                  "column": 1,
                  "line": 8,
                  "offset": 56,
                },
              },
              "type": "text",
              "value": "Second line",
            },
          ],
          "position": {
            "end": {
              "column": 12,
              "line": 8,
              "offset": 67,
            },
            "start": {
              "column": 1,
              "line": 8,
              "offset": 56,
            },
          },
          "type": "paragraph",
        },
      ],
      "data": {
        "hName": "component",
        "hProperties": {},
      },
      "fmAttributes": {},
      "name": "component",
      "position": {
        "end": {
          "column": 3,
          "line": 9,
          "offset": 70,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "containerComponent",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 11,
              "line": 11,
              "offset": 82,
            },
            "start": {
              "column": 1,
              "line": 11,
              "offset": 72,
            },
          },
          "type": "text",
          "value": "Third line",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 11,
          "offset": 82,
        },
        "start": {
          "column": 1,
          "line": 11,
          "offset": 72,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 11,
      "line": 11,
      "offset": 82,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > nested-component 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 13,
                  "line": 8,
                  "offset": 106,
                },
                "start": {
                  "column": 1,
                  "line": 8,
                  "offset": 94,
                },
              },
              "type": "text",
              "value": "Default slot",
            },
          ],
          "position": {
            "end": {
              "column": 13,
              "line": 8,
              "offset": 106,
            },
            "start": {
              "column": 1,
              "line": 8,
              "offset": 94,
            },
          },
          "type": "paragraph",
        },
        {
          "attributes": {},
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 21,
                      "line": 11,
                      "offset": 144,
                    },
                    "start": {
                      "column": 1,
                      "line": 11,
                      "offset": 124,
                    },
                  },
                  "type": "text",
                  "value": "Secondary slot value",
                },
              ],
              "position": {
                "end": {
                  "column": 21,
                  "line": 11,
                  "offset": 144,
                },
                "start": {
                  "column": 1,
                  "line": 11,
                  "offset": 124,
                },
              },
              "type": "paragraph",
            },
            {
              "attributes": {},
              "children": [],
              "data": {
                "hName": "hello",
                "hProperties": {
                  "key": "value",
                },
              },
              "fmAttributes": {
                "key": "value",
              },
              "name": "hello",
              "position": {
                "end": {
                  "column": 6,
                  "line": 17,
                  "offset": 187,
                },
                "start": {
                  "column": 3,
                  "line": 13,
                  "offset": 148,
                },
              },
              "rawData": "
  key: value
  ---",
              "type": "containerComponent",
            },
          ],
          "data": {
            "hName": "component-slot",
            "hProperties": {
              "v-slot:secondary-slot": "",
            },
          },
          "name": "secondary-slot",
          "position": {
            "end": {
              "column": 3,
              "line": 18,
              "offset": 190,
            },
            "start": {
              "column": 2,
              "line": 10,
              "offset": 109,
            },
          },
          "type": "componentContainerSection",
        },
      ],
      "data": {
        "hName": "with-frontmatter-and-nested-component",
        "hProperties": {
          ":array": "[\\"item\\",{\\"itemKey\\":\\"value\\"}]",
          "key": "value",
        },
      },
      "fmAttributes": {
        "array": [
          "item",
          {
            "itemKey": "value",
          },
        ],
        "key": "value",
      },
      "name": "with-frontmatter-and-nested-component",
      "position": {
        "end": {
          "column": 3,
          "line": 18,
          "offset": 190,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "rawData": "
key: value
array:
  - item
  - itemKey: value
---",
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 18,
      "offset": 190,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > nested-component-yaml 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 13,
                  "line": 8,
                  "offset": 115,
                },
                "start": {
                  "column": 1,
                  "line": 8,
                  "offset": 103,
                },
              },
              "type": "text",
              "value": "Default slot",
            },
          ],
          "position": {
            "end": {
              "column": 13,
              "line": 8,
              "offset": 115,
            },
            "start": {
              "column": 1,
              "line": 8,
              "offset": 103,
            },
          },
          "type": "paragraph",
        },
        {
          "attributes": {},
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 21,
                      "line": 11,
                      "offset": 153,
                    },
                    "start": {
                      "column": 1,
                      "line": 11,
                      "offset": 133,
                    },
                  },
                  "type": "text",
                  "value": "Secondary slot value",
                },
              ],
              "position": {
                "end": {
                  "column": 21,
                  "line": 11,
                  "offset": 153,
                },
                "start": {
                  "column": 1,
                  "line": 11,
                  "offset": 133,
                },
              },
              "type": "paragraph",
            },
            {
              "attributes": {},
              "children": [],
              "data": {
                "hName": "hello",
                "hProperties": {
                  "key": "value",
                },
              },
              "fmAttributes": {
                "key": "value",
              },
              "name": "hello",
              "position": {
                "end": {
                  "column": 6,
                  "line": 17,
                  "offset": 200,
                },
                "start": {
                  "column": 3,
                  "line": 13,
                  "offset": 157,
                },
              },
              "rawData": "key: value
---",
              "type": "containerComponent",
            },
          ],
          "data": {
            "hName": "component-slot",
            "hProperties": {
              "v-slot:secondary-slot": "",
            },
          },
          "name": "secondary-slot",
          "position": {
            "end": {
              "column": 3,
              "line": 18,
              "offset": 203,
            },
            "start": {
              "column": 2,
              "line": 10,
              "offset": 118,
            },
          },
          "type": "componentContainerSection",
        },
      ],
      "data": {
        "hName": "with-frontmatter-and-nested-component-yaml",
        "hProperties": {
          ":array": "[\\"item\\",{\\"itemKey\\":\\"value\\"}]",
          "key": "value",
        },
      },
      "fmAttributes": {
        "array": [
          "item",
          {
            "itemKey": "value",
          },
        ],
        "key": "value",
      },
      "name": "with-frontmatter-and-nested-component-yaml",
      "position": {
        "end": {
          "column": 3,
          "line": 18,
          "offset": 203,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "rawData": "key: value
array:
  - item
  - itemKey: value
---",
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 18,
      "offset": 203,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > section-order 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [
        {
          "attributes": {},
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 3,
                      "offset": 19,
                    },
                    "start": {
                      "column": 1,
                      "line": 3,
                      "offset": 14,
                    },
                  },
                  "type": "text",
                  "value": "Hello",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 3,
                  "offset": 19,
                },
                "start": {
                  "column": 1,
                  "line": 3,
                  "offset": 14,
                },
              },
              "type": "paragraph",
            },
          ],
          "data": {
            "hName": "component-slot",
            "hProperties": {
              "v-slot:title": "",
            },
          },
          "name": "title",
          "position": {
            "end": {
              "column": 1,
              "line": 4,
              "offset": 20,
            },
            "start": {
              "column": 2,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "componentContainerSection",
        },
        {
          "attributes": {},
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 5,
                      "offset": 40,
                    },
                    "start": {
                      "column": 1,
                      "line": 5,
                      "offset": 35,
                    },
                  },
                  "type": "text",
                  "value": "World",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 5,
                  "offset": 40,
                },
                "start": {
                  "column": 1,
                  "line": 5,
                  "offset": 35,
                },
              },
              "type": "paragraph",
            },
          ],
          "data": {
            "hName": "component-slot",
            "hProperties": {
              "v-slot:another-title": "",
            },
          },
          "name": "another-title",
          "position": {
            "end": {
              "column": 1,
              "line": 6,
              "offset": 41,
            },
            "start": {
              "column": 2,
              "line": 4,
              "offset": 21,
            },
          },
          "type": "componentContainerSection",
        },
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 3,
                  "line": 7,
                  "offset": 52,
                },
                "start": {
                  "column": 1,
                  "line": 7,
                  "offset": 50,
                },
              },
              "type": "text",
              "value": "P1",
            },
          ],
          "position": {
            "end": {
              "column": 3,
              "line": 7,
              "offset": 52,
            },
            "start": {
              "column": 1,
              "line": 7,
              "offset": 50,
            },
          },
          "type": "paragraph",
        },
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 3,
                  "line": 9,
                  "offset": 56,
                },
                "start": {
                  "column": 1,
                  "line": 9,
                  "offset": 54,
                },
              },
              "type": "text",
              "value": "P2",
            },
          ],
          "position": {
            "end": {
              "column": 3,
              "line": 9,
              "offset": 56,
            },
            "start": {
              "column": 1,
              "line": 9,
              "offset": 54,
            },
          },
          "type": "paragraph",
        },
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 2,
                  "line": 11,
                  "offset": 59,
                },
                "start": {
                  "column": 1,
                  "line": 11,
                  "offset": 58,
                },
              },
              "type": "text",
              "value": "P",
            },
          ],
          "position": {
            "end": {
              "column": 2,
              "line": 11,
              "offset": 59,
            },
            "start": {
              "column": 1,
              "line": 11,
              "offset": 58,
            },
          },
          "type": "paragraph",
        },
      ],
      "data": {
        "hName": "comp",
        "hProperties": {},
      },
      "fmAttributes": {},
      "name": "comp",
      "position": {
        "end": {
          "column": 3,
          "line": 12,
          "offset": 62,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "rawData": undefined,
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 12,
      "offset": 62,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > section-order-2 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [
        {
          "attributes": {},
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 2,
                      "line": 3,
                      "offset": 11,
                    },
                    "start": {
                      "column": 1,
                      "line": 3,
                      "offset": 10,
                    },
                  },
                  "type": "text",
                  "value": "A",
                },
              ],
              "position": {
                "end": {
                  "column": 2,
                  "line": 3,
                  "offset": 11,
                },
                "start": {
                  "column": 1,
                  "line": 3,
                  "offset": 10,
                },
              },
              "type": "paragraph",
            },
          ],
          "data": {
            "hName": "component-slot",
            "hProperties": {
              "v-slot:a": "",
            },
          },
          "name": "a",
          "position": {
            "end": {
              "column": 1,
              "line": 4,
              "offset": 12,
            },
            "start": {
              "column": 2,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "componentContainerSection",
        },
        {
          "attributes": {},
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 2,
                      "line": 5,
                      "offset": 16,
                    },
                    "start": {
                      "column": 1,
                      "line": 5,
                      "offset": 15,
                    },
                  },
                  "type": "text",
                  "value": "C",
                },
              ],
              "position": {
                "end": {
                  "column": 2,
                  "line": 5,
                  "offset": 16,
                },
                "start": {
                  "column": 1,
                  "line": 5,
                  "offset": 15,
                },
              },
              "type": "paragraph",
            },
          ],
          "data": {
            "hName": "component-slot",
            "hProperties": {
              "v-slot:c": "",
            },
          },
          "name": "c",
          "position": {
            "end": {
              "column": 1,
              "line": 6,
              "offset": 17,
            },
            "start": {
              "column": 2,
              "line": 4,
              "offset": 13,
            },
          },
          "type": "componentContainerSection",
        },
        {
          "attributes": {},
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 2,
                      "line": 7,
                      "offset": 21,
                    },
                    "start": {
                      "column": 1,
                      "line": 7,
                      "offset": 20,
                    },
                  },
                  "type": "text",
                  "value": "B",
                },
              ],
              "position": {
                "end": {
                  "column": 2,
                  "line": 7,
                  "offset": 21,
                },
                "start": {
                  "column": 1,
                  "line": 7,
                  "offset": 20,
                },
              },
              "type": "paragraph",
            },
          ],
          "data": {
            "hName": "component-slot",
            "hProperties": {
              "v-slot:b": "",
            },
          },
          "name": "b",
          "position": {
            "end": {
              "column": 1,
              "line": 8,
              "offset": 22,
            },
            "start": {
              "column": 2,
              "line": 6,
              "offset": 18,
            },
          },
          "type": "componentContainerSection",
        },
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 3,
                  "line": 9,
                  "offset": 33,
                },
                "start": {
                  "column": 1,
                  "line": 9,
                  "offset": 31,
                },
              },
              "type": "text",
              "value": "P1",
            },
          ],
          "position": {
            "end": {
              "column": 3,
              "line": 9,
              "offset": 33,
            },
            "start": {
              "column": 1,
              "line": 9,
              "offset": 31,
            },
          },
          "type": "paragraph",
        },
      ],
      "data": {
        "hName": "comp",
        "hProperties": {},
      },
      "fmAttributes": {},
      "name": "comp",
      "position": {
        "end": {
          "column": 3,
          "line": 10,
          "offset": 36,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "rawData": undefined,
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 10,
      "offset": 36,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > sugar-syntax 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [],
      "data": {
        "hName": "component",
        "hProperties": {},
      },
      "fmAttributes": {},
      "name": "component",
      "position": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "textComponent",
    },
  ],
  "position": {
    "end": {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > text 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 5,
                  "line": 2,
                  "offset": 16,
                },
                "start": {
                  "column": 1,
                  "line": 2,
                  "offset": 12,
                },
              },
              "type": "text",
              "value": "text",
            },
          ],
          "position": {
            "end": {
              "column": 5,
              "line": 2,
              "offset": 16,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 12,
            },
          },
          "type": "paragraph",
        },
      ],
      "data": {
        "hName": "component",
        "hProperties": {},
      },
      "fmAttributes": {},
      "name": "component",
      "position": {
        "end": {
          "column": 3,
          "line": 3,
          "offset": 19,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 3,
      "offset": 19,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`block-component > trim-slot-name 1`] = `
{
  "children": [
    {
      "attributes": {},
      "children": [
        {
          "attributes": {},
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 13,
                      "line": 3,
                      "offset": 31,
                    },
                    "start": {
                      "column": 1,
                      "line": 3,
                      "offset": 19,
                    },
                  },
                  "type": "text",
                  "value": "slot content",
                },
              ],
              "position": {
                "end": {
                  "column": 13,
                  "line": 3,
                  "offset": 31,
                },
                "start": {
                  "column": 1,
                  "line": 3,
                  "offset": 19,
                },
              },
              "type": "paragraph",
            },
          ],
          "data": {
            "hName": "component-slot",
            "hProperties": {
              "v-slot:slot": "",
            },
          },
          "name": "slot",
          "position": {
            "end": {
              "column": 3,
              "line": 4,
              "offset": 34,
            },
            "start": {
              "column": 2,
              "line": 2,
              "offset": 13,
            },
          },
          "type": "componentContainerSection",
        },
      ],
      "data": {
        "hName": "component",
        "hProperties": {},
      },
      "fmAttributes": {},
      "name": "component",
      "position": {
        "end": {
          "column": 3,
          "line": 4,
          "offset": 34,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "containerComponent",
    },
  ],
  "position": {
    "end": {
      "column": 3,
      "line": 4,
      "offset": 34,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
